fix username generation overlap, add puzzle_rush_best in prep for puzzle rush

--- a/client/src/app/components/layout/play/play-page/play-page.component.scss
+++ b/client/src/app/components/layout/play/play-page/play-page.component.scss
@@ -52,6 +52,8 @@ section.profile {
     flex-direction: column;
     align-items: center;
     gap: 7px;
+
+    zoom: 0.9;
 }
 
 .quest-header {
